cmake_minimum_required(VERSION 3.1)
set(Headers arguments.h argumentsMPFR.h capacityDistribution.h computeConditionalProb.h context.h includeMPFR.h includeMPIRXX.h allPointsMaxFlow.hpp)
set(CppFiles arguments.cpp argumentsMPFR.cpp capacityDistribution.cpp context.cpp computeConditionalProb.cpp)
add_library(multiStateCommon STATIC ${CppFiles} ${Headers})
target_link_libraries(multiStateCommon INTERFACE ${Boost_LIBRARIES} mpfr)
target_include_directories(multiStateCommon PUBLIC ${Boost_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_features(multiStateCommon PUBLIC cxx_rvalue_references)
