cmake_minimum_required(VERSION 3.1)
set(CppFiles crudeMC.cpp createCapacityDistribution.cpp createContext.cpp convertGraphNEL.cpp convertGraphAM.cpp convertGraphIGraph.cpp convertGraph.cpp register.cpp PMC.cpp turnip.cpp generalisedSplittingFixedEffort.cpp)
set(HeaderFiles createCapacityDistribution.h createContext.h convertGraph.h)
add_library(multiStateFlowReliabilityRPackage SHARED ${CppFiles} ${HeaderFiles})
target_link_libraries(multiStateFlowReliabilityRPackage PUBLIC multiStateCommon Rcpp)
set_target_properties(multiStateFlowReliabilityRPackage PROPERTIES OUTPUT_NAME "multiStateFlowReliability")
target_compile_definitions(multiStateFlowReliabilityRPackage PRIVATE CUSTOM_STATIC_RCPP)

if(WIN32)
	target_compile_definitions(multiStateFlowReliabilityRPackage PUBLIC _CRT_SECURE_NO_WARNINGS)
	target_link_libraries(multiStateFlowReliabilityRPackage PRIVATE "${CMAKE_BINARY_DIR}/RPackage/R.lib")
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		string(TOUPPER "${BUILD_TYPE}" UPPER_BUILD_TYPE)
		if(CMAKE_SIZEOF_VOID_P EQUAL 8)
			set_target_properties(multiStateFlowReliabilityRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64)
		else()
			set_target_properties(multiStateFlowReliabilityRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386)
		endif()
	endforeach()
else()
	set_target_properties(multiStateFlowReliabilityRPackage PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/RPackage/src)
	set_target_properties(multiStateFlowReliabilityRPackage PROPERTIES PREFIX "")
endif()
